Working background image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
 <body>
 
+    <div id="main">
+
         <nav>
             <ul>
             <li><span class="name">Bryan Falls</span></li>
@@ -19,7 +21,9 @@
 
     <div class="container">
 
+        </div>
         
     </div>
+
 </body>
 </html>
