--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
 
     <div id="main">
-
-        <nav>
+        <nav>   
             <ul>
             <li><span class="name">Bryan Falls</span></li>
             <li><a href="contact.html">Contact</a></li>
@@ -20,10 +19,10 @@
         </nav>
 
     <div class="container">
-
-        </div>
-        
+        <img src="wikiviewerPen.jpeg" alt="Project" class="projects">
+        <img src="quotePen.jpeg" alt="Project" class="projects">
+        <img src="calculatorPen.jpeg" alt="Project" class="projects">
     </div>
-
+    </div>
 </body>
 </html>
