--- a/about.html
+++ b/about.html
@@ -8,15 +8,17 @@
 
 <body>
 
-      <nav>
+    <div id="main">
+
+         <nav>
             <ul>
             <li><span class="name">Bryan Falls</span></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html" class="current">About</a></li>
             <li><a href="index.html">Home</a></li>
             </ul>
-        </nav>
+          </nav>
 
-
+    </div>
 </body>
 </html>
