--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,18 @@
 
 <body>
 
-      <nav>
+    <div id="main">
+
+        <nav>
             <ul>
             <li><span class="name">Bryan Falls</span></li>
             <li><a href="contact.html" class="current">Contact</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="index.html">Home</a></li>
             </ul>
-        </nav>
+      </nav>
+
+    </div>
+
 </body>
 </html>
