--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,9 @@
             <li><a href="index.html">Home</a></li>
             </ul>
       </nav>
-
+    <div class="container">
+    
     </div>
-
+    </div>
 </body>
 </html>
