--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Bryan Falls' Portfolio Site - Contact</title>
+    <script src="https://use.fontawesome.com/654d3d7370.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,9 +19,22 @@
             <li><a href="index.html">Home</a></li>
             </ul>
       </nav>
-    <div class="container">
-    
-    </div>
-    </div>
+      
+        <div class="container">
+            <h3>For business inqueries, please contact me!</h3>
+            <form>
+                Name:
+                <input type="text" id="form-name">
+                <br>
+                Email:
+                <input type="email" id="form-email">
+                <br>
+                Message:
+                <input type="text" id="form-message">
+                <br>
+                <input type="submit" id="form-submit">
+            </form>
+        </div>
+      </div>
 </body>
 </html>
