--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-
+    <div id="main">
+        <h1>Bryan Falls UI/UX Developer</h1>
         <nav>   
             <ul>
             <li><span class="name">Bryan Falls</span></li>
@@ -17,14 +18,11 @@
             </ul>
         </nav>
 
-    <div id="main">
-        <h1>Bryan Falls UI/UX Developer</h1>
+    
     <div class="container">
         <img src="http://lorempixel.com/output/city-h-c-350-400-5.jpg" alt="Project" class="projects">
         <img src="http://lorempixel.com/output/technics-h-c-350-400-5.jpg" alt="Project" class="projects">
         <img src="http://lorempixel.com/output/nature-h-c-350-400-2.jpg" alt="Project" class="projects">
     </div>
     </div>
-    <footer>This website created and maintained by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></a>
-</body>
-</html>
+    <footer>This website created and maintained by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a>
