all content no style

--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Bryan Falls' Portfolio Site - About</title>
+    <script src="https://use.fontawesome.com/654d3d7370.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -19,7 +20,21 @@
             </ul>
           </nav>
     <div class="container">
-    
+        <h1>Bryan Falls</h1>
+        <p>Hello! My name is Bryan Falls and I am a Detroit-based web developer. When I am not hard at work on new, exciting web content, I like to spend time with my wife and newborn son.</p>
+        <br>
+        <p>My skills in order of proficency are as follows:</p>
+        <ol>
+            <li>JavaScript/jQuery</li>
+            <li>HTML/CSS</li>
+            <li>Responsive Web Design using Bootstrap</li>
+            <li>AngularJS</li>
+        </ol>
+        <img src="https://avatars3.githubusercontent.com/u/21185277?v=3" id="portrait"/>
+    </div>
+    <div>
+        <a href="https://github.com/BFalls158"><i class="fa fa-github"></i></a>
+        <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter"></i></a>
     </div>
     </div>
 </body>
