--- a/contact.html
+++ b/contact.html
@@ -23,16 +23,13 @@
         <div class="container">
             <h3>For business inqueries, please contact me!</h3>
             <form>
-                Name:
-                <input type="text" id="form-name">
+                <div><i class="fa fa-user"></i>  <input type="text" id="form-name" placeholder="Name"></div>
                 <br>
-                Email:
-                <input type="email" id="form-email">
+                <div><i class="fa fa-envelope"></i><input type="email" id="form-email" placeholder="E-mail"></div>
                 <br>
-                Message:
-                <input type="text" id="form-message">
+                <textarea name="message" id="form-message" placeholder="Your Message"></textarea>
                 <br>
-                <input type="submit" id="form-submit">
+                <button type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>  Sumbit</button>
             </form>
         </div>
       </div>
