--- a/index.html
+++ b/index.html
@@ -26,3 +26,5 @@
     </div>
     </div>
     <footer>This website created and maintained by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a>
+</body>
+</html>
