content complete some styles

--- a/about.html
+++ b/about.html
@@ -31,11 +31,14 @@
             <li>AngularJS</li>
         </ol>
         <img src="https://avatars3.githubusercontent.com/u/21185277?v=3" id="portrait"/>
+        <blockquote>Lorem ipsum dolor sit amet, mel quas eleifend petentium et, nec ut mundi intellegam. Ea mel euismod qualisque, has fugit fabellas assueverit ne. Per facilisi salutatus ad, no inani dolorum duo, solum noluisse disputationi id ius. Partem aliquam ut eam, minim choro albucius no mea. No mei delenit efficiantur, sit id posse utroque nominati. Cu vis probatus necessitatibus.</blockquote>
     </div>
+
     <div>
         <a href="https://github.com/BFalls158"><i class="fa fa-github"></i></a>
         <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter"></i></a>
     </div>
     </div>
+    <footer>This website created and maintained by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
 </body>
 </html>
