--- a/contact.html
+++ b/contact.html
@@ -33,5 +33,6 @@
             </form>
         </div>
       </div>
+      <footer>This website created and maintained by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
 </body>
 </html>
