Fully functioning and styled site - v1.0

--- a/about.html
+++ b/about.html
@@ -21,7 +21,8 @@
           </nav>
     <div class="container">
         <h1>Bryan Falls</h1>
-        <p>Hello! My name is Bryan Falls and I am a Detroit-based web developer. When I am not hard at work on new, exciting web content, I like to spend time with my wife and newborn son.</p>
+        <img src="https://avatars3.githubusercontent.com/u/21185277?v=3" id="portrait"/>
+        <p>Hello! My name is Bryan Falls and I am a Detroit-based web developer. When I am not hard at work on new, exciting web content, I enjoy spending time with my wife and newborn son.</p>
         <br>
         <p>My skills in order of proficency are as follows:</p>
         <ol>
@@ -30,15 +31,16 @@
             <li>Responsive Web Design using Bootstrap</li>
             <li>AngularJS</li>
         </ol>
-        <img src="https://avatars3.githubusercontent.com/u/21185277?v=3" id="portrait"/>
-        <blockquote>Lorem ipsum dolor sit amet, mel quas eleifend petentium et, nec ut mundi intellegam. Ea mel euismod qualisque, has fugit fabellas assueverit ne. Per facilisi salutatus ad, no inani dolorum duo, solum noluisse disputationi id ius. Partem aliquam ut eam, minim choro albucius no mea. No mei delenit efficiantur, sit id posse utroque nominati. Cu vis probatus necessitatibus.</blockquote>
+        
+        <blockquote cite="https://quotesondesign.com/m-c-escher/">We adore chaos because we love to produce order. <br>— M.C. ESCHER </blockquote>
     </div>
 
-    <div>
-        <a href="https://github.com/BFalls158"><i class="fa fa-github"></i></a>
-        <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter"></i></a>
     </div>
-    </div>
-    <footer>This website created and maintained by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
+    <footer>
+        <div>
+        <a href="https://github.com/BFalls158"><i class="fa fa-github contacts"></i></a>
+        <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter contacts"></i></a>
+        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a>
+    </footer>
 </body>
 </html>
