--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Bryan Falls' Portfolio Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://use.fontawesome.com/654d3d7370.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,6 +26,10 @@
         <img src="http://lorempixel.com/output/nature-h-c-350-400-2.jpg" alt="Project" class="projects">
     </div>
     </div>
-    <footer>This website created and maintained by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
+    <footer>
+        <div>
+        <a href="https://github.com/BFalls158"><i class="fa fa-github contacts"></i></a>
+        <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter contacts"></i></a>
+        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
 </body>
 </html>
