modified form style - v1.1

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
       <footer>
         <div>
         <a href="https://github.com/BFalls158"><i class="fa fa-github contacts"></i></a>
-        <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter contacts"></i></a>
+        <a href="https://twitter.com/Bfalls158"><i class="fa fa-twitter contacts"></i></a>
         </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
 </body>
 </html>
