--- a/about.html
+++ b/about.html
@@ -32,15 +32,15 @@
             <li>AngularJS</li>
         </ol>
         
-        <blockquote cite="https://quotesondesign.com/m-c-escher/">We adore chaos because we love to produce order. <br>— M.C. ESCHER </blockquote>
+        <blockquote cite="https://quotesondesign.com/m-c-escher/">We adore chaos because we love to produce order. <br/>- M.C. ESCHER </blockquote>
     </div>
-
-    </div>
-    <footer>
+        <footer>
         <div>
         <a href="https://github.com/BFalls158"><i class="fa fa-github contacts"></i></a>
         <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter contacts"></i></a>
-        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a>
+        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158" id="fcc-profile">Bryan Falls</a>
     </footer>
+    </div>
+
 </body>
 </html>
