--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,13 @@
                 <button type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>  Sumbit</button>
             </form>
         </div>
-      </div>
-      <footer>
+        <footer>
         <div>
         <a href="https://github.com/BFalls158"><i class="fa fa-github contacts"></i></a>
-        <a href="https://twitter.com/Bfalls158"><i class="fa fa-twitter contacts"></i></a>
-        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
+        <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter contacts"></i></a>
+        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158" id="fcc-profile">Bryan Falls</a>
+        </footer>
+      </div>
+      
 </body>
 </html>
