--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <img src="http://lorempixel.com/output/technics-h-c-350-400-5.jpg" alt="Project" class="projects">
         <img src="http://lorempixel.com/output/nature-h-c-350-400-2.jpg" alt="Project" class="projects">
     </div>
-    </div>
-    <footer>
+        <footer>
         <div>
         <a href="https://github.com/BFalls158"><i class="fa fa-github contacts"></i></a>
         <a href="https://twitter.com/Excaliber158"><i class="fa fa-twitter contacts"></i></a>
-        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158">Bryan Falls</a></footer>
+        </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158" id="fcc-profile">Bryan Falls</a>
+    </footer>
+    </div>
 </body>
 </html>
