Added js playground

--- a/about.html
+++ b/about.html
@@ -41,6 +41,6 @@
         </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158" id="fcc-profile">Bryan Falls</a>
     </footer>
     </div>
-
+<script src="myscripts.js"></script>
 </body>
 </html>
