--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,10 @@
                 <br>
                 <button type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>  Sumbit</button>
             </form>
+            <form id="js-payground">
+                <textarea id="playground-text"></textarea>
+                <input type="button" id="playground-button" value="Pig Latin Transformation!"/>
+                <p id="translated"></p>
         </div>
         <footer>
         <div>
@@ -39,6 +43,6 @@
         </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158" id="fcc-profile">Bryan Falls</a>
         </footer>
       </div>
-      
+<script src="javascript.js"></script>
 </body>
 </html>
