--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     
     <div class="container">
-        <img src="http://lorempixel.com/output/city-h-c-350-400-5.jpg" alt="Project" class="projects">
-        <img src="http://lorempixel.com/output/technics-h-c-350-400-5.jpg" alt="Project" class="projects">
-        <img src="http://lorempixel.com/output/nature-h-c-350-400-2.jpg" alt="Project" class="projects">
+        <img src="http://lorempixel.com/output/city-h-c-350-400-5.jpg" alt="Project" class="projects"/>
+        <img src="http://lorempixel.com/output/technics-h-c-350-400-5.jpg" alt="Project" class="projects"/>
+        <img src="http://lorempixel.com/output/nature-h-c-350-400-2.jpg" alt="Project" class="projects"/>
     </div>
         <footer>
         <div>
@@ -32,5 +32,6 @@
         </div>This website developed by: <a href="https://www.freecodecamp.com/bfalls158" id="fcc-profile">Bryan Falls</a>
     </footer>
     </div>
+<script src="myscripts.js"></script>
 </body>
 </html>
