img border and rearrange

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <li>AngularJS</li>
         </ol>
         
-        <blockquote cite="https://quotesondesign.com/m-c-escher/">We adore chaos because we love to produce order. <br/>- M.C. ESCHER </blockquote>
+        <blockquote cite="https://quotesondesign.com/m-c-escher/">"We adore chaos because we love to produce order." <br/>- M.C. ESCHER </blockquote>
     </div>
         <footer>
         <div>
